# artemis

./: README.md  core.py  eyes.py  main.py  monitor.py  pyproject.toml  requirements.txt
app/: config.py  main.py  utils.py
app/core/: actor.py  monitor.py  whip.py
utils/: fix_hsv.py
